# mobile-robot-localization-using-particle-filter

./: CMakeLists.txt  README.md  package.xml  pf_algo.py  pf_classes.py  pf_collect_data_node.py  pf_functions.py  plot_map_features.py
Data/: ANGLES_lidar.csv  THETA_odom.csv
Data/Estimation/: PARTICLES_step_0.csv  PARTICLES_step_1.csv  PARTICLES_step_10.csv  PARTICLES_step_11.csv  PARTICLES_step_12.csv  PARTICLES_step_13.csv  PARTICLES_step_14.csv  PARTICLES_step_15.csv  PARTICLES_step_16.csv  PARTICLES_step_17.csv  PARTICLES_step_18.csv  PARTICLES_step_19.csv  PARTICLES_step_2.csv  PARTICLES_step_20.csv  PARTICLES_step_21.csv  PARTICLES_step_22.csv  PARTICLES_step_23.csv  PARTICLES_step_24.csv  PARTICLES_step_25.csv  PARTICLES_step_26.csv  PARTICLES_step_27.csv  PARTICLES_step_28.csv  PARTICLES_step_29.csv  PARTICLES_step_3.csv  PARTICLES_step_30.csv  PARTICLES_step_31.csv  PARTICLES_step_32.csv  PARTICLES_step_33.csv  PARTICLES_step_34.csv  PARTICLES_step_35.csv  PARTICLES_step_36.csv  PARTICLES_step_37.csv  PARTICLES_step_38.csv  PARTICLES_step_39.csv  PARTICLES_step_4.csv  PARTICLES_step_40.csv  PARTICLES_step_41.csv  PARTICLES_step_42.csv  PARTICLES_step_43.csv  PARTICLES_step_44.csv  (+51 more)
Data/stage_1/: DISTANCES_lidar.csv  X_odom.csv  Y_odom.csv
Data/stage_1/Estimation/: PARTICLES_step_0.csv  PARTICLES_step_1.csv  PARTICLES_step_10.csv  PARTICLES_step_100.csv  PARTICLES_step_101.csv  (+146 more)
Maps/stage_1/: Wall_0.csv  Wall_2.csv  Wall_3.csv  Wall_4.csv
scripts/: pf_algo.py  pf_classes.py  pf_collect_data_node.py  pf_functions.py  plot_map_features.py  scan_node.py
